tests/paczka1/small_fuzzy/28988621.err
Error in line 1: 69lqOGFDOxc S226 40,0
Error in line 4: FRRa S479 48,3
